--- a/index.html
+++ b/index.html
@@ -1887,9 +1887,9 @@ html {
     };
     
     const techRows = [
-        { label: '📋 Programa:', value: programNames[aisProgram] || aisProgram.toUpperCase() }, // ⬅️ NUEVO
-        { label: '🏭 Fabricante:', value: subType.toUpperCase() },
-        { label: '🔢 Serial Number:', value: serial }
+        { label: ' Programa:', value: programNames[aisProgram] || aisProgram.toUpperCase() }, // ⬅️ NUEVO
+        { label: ' Fabricante:', value: subType.toUpperCase() },
+        { label: ' Serial Number:', value: serial }
     ];
         
         if (motherboard) {
