--- a/index.html
+++ b/index.html
@@ -971,6 +971,8 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                 </div>
         </div>
 
 
