--- a/index.html
+++ b/index.html
@@ -685,8 +685,9 @@
 
                 <!-- PROGRESS FORM -->
                 <div id="form-progress" class="form-section hidden">
+                    
+                    <! -- Cambiar logo por circular -->
                     <img src="images/Progress.png" alt="Progress" class="service-icon-img progress-logo">
-                    <h2 class="service-title">Progress</h2>
                     <span class="badge">3 required fields</span>
                     <p class="service-description">Adistec, as a regional Progress® distributor, provides direct support
                         for the OpenEdge solution through its dedicated team for its customers. In case you require
