--- a/index.html
+++ b/index.html
@@ -2146,7 +2146,7 @@
                     createPrioritySection(data.prioridad),
                     createDescriptionSection(data.description)
                 ];
-                formattedData = createHTMLTemplate('SOLICITUD DE SOPORTE PROGRESS', sections);
+                formattedData = createHTMLTemplate('Adistec Progress', sections);
             }
 
             // AIS
@@ -2185,7 +2185,7 @@
                     createPrioritySection(data.prioridad),
                     createDescriptionSection(data.description)
                 ];
-                formattedData = createHTMLTemplate(`Solicitud de soporte Adistec Integrated Solutions - ${subType.toUpperCase()}`, sections);
+                formattedData = createHTMLTemplate(`Adistec Integrated Solutions - ${subType.toUpperCase()}`, sections);
             }
 
             // AEC
@@ -2210,7 +2210,7 @@
                     createPrioritySection(data.prioridad),
                     createDescriptionSection(data.description)
                 ];
-                formattedData = createHTMLTemplate('SOLICITUD DE SOPORTE AEC', sections);
+                formattedData = createHTMLTemplate('Adistec Enterprice Cloud', sections);
             }
 
             // AWLC
@@ -2233,7 +2233,7 @@
                     createPrioritySection(data.prioridad),
                     createDescriptionSection(data.description)
                 ];
-                formattedData = createHTMLTemplate(`SOLICITUD DE SOPORTE AWLC - ${subType.toUpperCase()}`, sections);
+                formattedData = createHTMLTemplate(`Adistec White Label Cloud - ${subType.toUpperCase()}`, sections);
             }
 
             // LABS
@@ -2268,7 +2268,7 @@
                     ]),
                     createDescriptionSection(data.description)
                 ];
-                formattedData = createHTMLTemplate('SOLICITUD DE SOPORTE LABS', sections);
+                formattedData = createHTMLTemplate('Adistec Labs', sections);
             }
 
             // EDUCATION
@@ -2289,7 +2289,7 @@
                     createPrioritySection(data.prioridad),
                     createDescriptionSection(data.description)
                 ];
-                formattedData = createHTMLTemplate('SOLICITUD DE SOPORTE EDUCATION', sections);
+                formattedData = createHTMLTemplate('Adistec Education', sections);
             }
 
             // Detectar FTP
